2008-02-10
  - bumped version to 0.2.0.0
  - removed dependency between SAXParser and CodeGenerator (moved
    the parse/resolve/generate 'process' in Gtkaml.Parser)
  - enforced specifying the constructor parameters for the root tag

2008-02-08
  - fixed a segfault where a g_strjoinv () was called without a last NULL
  - fixed bug with signals handling that missed most parameters

2008-02-06
  - added TreeViewColumn 'adds' in implicits.ini  
	- added reference tags (see goals for 0.2)	
	- changed ',' into ';' in implicits.ini for TreeView

2008-02-05
gtkaml 0.1.1.0 release
	- added the Gtk.MenuItem in implicits.ini with 'new' parameter 'label'
	- fixed an issue when loooking up for constructor parameters' type
	- fixed a bug (#1) which prevented a widget from a namespace to be 
	  added into a container from another namespace (and viceversa)
	- fixed an issue (#2) with gtkaml:name and gtkaml:namespace added as
	  properties of this
	- removed the signal that caused a vala crash from example0

2008-02-03	
gtkaml 0.1.0.1 release
	- configure.ac now specifies the real required version of vala (>= 0.1.6)
	- examples are not installed in bin anymoer
	- C source for examples is not provided (is generated by gtkaml + vala)


2008-02-02: 
gtkaml 0.1 release
	- gtkaml:name and gtkaml:namespace for specifying the resulting class name/namespace
	- the gtkaml namespace name is considered the one with the URI starting with "http://gtkaml.org" 
	  (e.g. you can use xmlns:class="http://gtkaml.org" and then 
	- 'complex' attributes: tags that have the name of an attribute of the parent tag are used to 
	  specify complex widget values (e.g. tab_label parameter of add_page ())
	- 'simple' attributes as tags - the CDATA or text content is the literal;
	
2008-02-01
Rewrite:
	- finished rewrite so that we resolve the constructors and add methods for all widget tree, 
	  and _then_ render all the source